# Asteroid_in_c

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
asteroids/: asteroids.c  asteroids.h
c_vector/: vector.c  vector.h
geom/: dyn_params.c  dyn_params.h  dynamics.c  dynamics.h  triangle.c  triangle.h  utils.c  utils.h  vec.c  vec.h
graphics/: actions.c  actions.h  gfx.c  gfx.h  main.c
threads/: ast_params.c  ast_params.h  bullets_params.c  bullets_params.h
vessel/: bullet.c  bullet.h  vessel.c  vessel.h
